--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ flask = "^3.0.1"
 line-bot-sdk = "^3.7.0"
 pytz = "^2023.3.post1"
 requests = "^2.31.0"
+google-generativeai = "^0.4.1"
 
 [tool.pyright]
 # https://github.com/microsoft/pyright/blob/main/docs/configuration.md
