--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ annotated-types==0.6.0
 async-timeout==4.0.3
 attrs==23.2.0
 blinker==1.7.0
+cachetools==5.3.3
 certifi==2023.11.17
 charset-normalizer==3.3.2
 click==8.1.7
@@ -12,18 +13,31 @@ Deprecated==1.2.14
 Flask==3.0.1
 frozenlist==1.4.1
 future==0.18.3
+google-ai-generativelanguage==0.4.0
+google-api-core==2.18.0
+google-auth==2.29.0
+google-generativeai==0.4.1
+googleapis-common-protos==1.63.0
+grpcio==1.62.1
+grpcio-status==1.62.1
 idna==3.6
 itsdangerous==2.1.2
 Jinja2==3.1.3
 line-bot-sdk==3.7.0
 MarkupSafe==2.1.3
 multidict==6.0.4
+proto-plus==1.23.0
+protobuf==4.25.3
+pyasn1==0.6.0
+pyasn1_modules==0.4.0
 pydantic==2.5.3
 pydantic_core==2.14.6
 python-dateutil==2.8.2
 pytz==2023.3.post1
 requests==2.31.0
+rsa==4.9
 six==1.16.0
+tqdm==4.66.2
 typing_extensions==4.9.0
 urllib3==2.1.0
 Werkzeug==3.0.1
